<resources>
    <string name="app_name">NextScreen</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="about_title">О программе</string>
    <string name="about_text">У лукоморья дуб зелёный;\n
    Златая цепь на дубе том:\n
    И днём и ночью <b>кот учёный</b>\n
    Всё ходит по цепи кругом;\n
    Идёт <b>направо</b> - песнь заводит,\n
    <b>Налево</b> - сказку говорит.</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="button1">About Activity</string>
    <string name="button2">Second Activity</string>
    <string name="button3">Передать</string>
    <string name="text_whom">Кому</string>
    <string name="text_description">Описание</string>
    <string name="text_description_received">дырку от бубеля</string>
    <string name="text_whom_received">Животинка</string>
    <string name="text_whom_string">username</string>
    <string name="text_description_string">description</string>
    <string name="text_received">, Вам передали -</string>
    <string name="text_sendler">\n <b>Отправитель - </b></string>
    <string name="username_send">Отправитель</string>
</resources>
